// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInputModal should render with a blank input field 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 0,
        },
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#000000",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />,
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
      }
    }
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "rgba(255, 255, 255, .37)",
        "borderColor": "rgba(255, 255, 255, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderWidth": 0,
        "flexShrink": 1,
        "marginBottom": -86,
        "overflow": "hidden",
        "paddingBottom": 97,
        "paddingLeft": 11,
        "paddingRight": 11,
        "paddingTop": 0,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 674,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      overlayColor="rgba(0, 0, 0, 0)"
      style={
        [
          {
            "backgroundColor": undefined,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "hsla(0, 0%, 53%, 0.3)",
            "borderRadius": 3,
            "height": 6,
            "marginTop": 6,
            "width": 67,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "marginBottom": 11,
          "marginTop": 28,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={2}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "flexShrink": 1,
              "fontFamily": "Quicksand-Medium",
              "fontSize": 27,
              "marginHorizontal": 11,
            },
            null,
          ]
        }
      >
        title
      </Text>
    </View>
    <View
      fullHeight={false}
      style={
        {
          "flexGrow": undefined,
          "flexShrink": 1,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
            false,
            null,
          ]
        }
      >
        message
      </Text>
      <View
        marginRemStyle={
          {
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
        multiline={false}
        style={
          {
            "flexGrow": undefined,
            "flexShrink": undefined,
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          disableAnimation={0}
          focusAnimation={0}
          focusable={true}
          jestAnimatedStyle={
            {
              "value": {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "rgba(0, 241, 162, 0)",
                "marginHorizontal": 0,
                "opacity": 1,
                "paddingVertical": 22,
              },
            }
          }
          multiline={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          scale={1}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, 0.2)",
              "borderColor": "rgba(0, 241, 162, 0)",
              "borderRadius": 11,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexGrow": undefined,
              "flexShrink": undefined,
              "marginHorizontal": 0,
              "opacity": 1,
              "paddingHorizontal": 17,
              "paddingVertical": 22,
            }
          }
        >
          <View
            collapsable={false}
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 0,
                  "width": 0,
                },
              }
            }
            scale={0}
            style={
              {
                "alignItems": "stretch",
                "aspectRatio": 1,
                "opacity": 0,
                "width": 0,
              }
            }
          />
          <View
            collapsable={false}
            focusValue={0}
            hasPlaceholder={false}
            jestAnimatedStyle={
              {
                "value": {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              }
            }
            style={
              {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "left": 0,
                "marginBottom": undefined,
                "marginTop": undefined,
              }
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              autoFocus={true}
              collapsable={false}
              defaultValue=""
              disableAnimation={0}
              editable={true}
              focusAnimation={0}
              forwardedRef={[Function]}
              jestAnimatedStyle={
                {
                  "value": {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 22,
                  },
                }
              }
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              scale={1}
              selectionColor="rgba(255, 255, 255, .25)"
              style={
                {
                  "color": "rgba(255, 255, 255, 1)",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 22,
                  "margin": 0,
                  "paddingHorizontal": 0,
                  "paddingVertical": 0,
                  "transform": [
                    {
                      "translateY": -0,
                    },
                  ],
                }
              }
              testID="undefined.textInput"
              textAlignVertical="top"
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": -22,
                "marginVertical": -28,
                "opacity": 1,
                "paddingHorizontal": 22,
                "paddingVertical": 28,
              }
            }
            testID="undefined.clearIcon"
          >
            <View
              collapsable={false}
              jestAnimatedStyle={
                {
                  "value": {
                    "opacity": 0,
                    "width": 0,
                  },
                }
              }
              scale={0}
              style={
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                  "opacity": 0,
                  "width": 0,
                }
              }
            >
              <Text
                collapsable={false}
                jestAnimatedStyle={
                  {
                    "value": {
                      "color": "rgba(255, 255, 255, 0.5019607843137255)",
                      "fontFamily": "anticon",
                      "fontSize": 0,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  }
                }
                style={
                  {
                    "color": "rgba(255, 255, 255, 0.5019607843137255)",
                    "fontFamily": "anticon",
                    "fontSize": 0,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        absolute={false}
        layout="column"
        parentType="modal"
        style={
          {
            "alignItems": "stretch",
            "alignSelf": "center",
            "flexDirection": "column",
            "margin": 11,
            "marginBottom": 22,
            "marginTop": 45,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexBasis": "auto",
              "flexGrow": 0,
              "flexShrink": 0,
              "justifyContent": "center",
              "margin": -11,
              "opacity": 1,
              "padding": 11,
            }
          }
        >
          <BVLinearGradient
            colors={
              [
                4280299823,
                4278214733,
              ]
            }
            endPoint={
              {
                "x": 1,
                "y": 0,
              }
            }
            locations={null}
            startPoint={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 34,
                  "flexDirection": "row",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "justifyContent": "center",
                },
                {
                  "alignSelf": "stretch",
                },
                {
                  "height": 67,
                  "paddingHorizontal": 34,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Medium",
                      "fontSize": 22,
                    },
                    null,
                  ],
                  null,
                ]
              }
            >
              Submit
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`TextInputModal should render with a populated input field 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedStyle={
      {
        "value": {
          "opacity": 0,
        },
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#000000",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />,
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
      }
    }
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "rgba(255, 255, 255, .37)",
        "borderColor": "rgba(255, 255, 255, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderWidth": 0,
        "flexShrink": 1,
        "marginBottom": -86,
        "overflow": "hidden",
        "paddingBottom": 97,
        "paddingLeft": 11,
        "paddingRight": 11,
        "paddingTop": 0,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 674,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      overlayColor="rgba(0, 0, 0, 0)"
      style={
        [
          {
            "backgroundColor": undefined,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "hsla(0, 0%, 53%, 0.3)",
            "borderRadius": 3,
            "height": 6,
            "marginTop": 6,
            "width": 67,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "marginBottom": 11,
          "marginTop": 28,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={2}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "flexShrink": 1,
              "fontFamily": "Quicksand-Medium",
              "fontSize": 27,
              "marginHorizontal": 11,
            },
            null,
          ]
        }
      >
        title
      </Text>
    </View>
    <View
      fullHeight={false}
      style={
        {
          "flexGrow": undefined,
          "flexShrink": 1,
        }
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 22,
              "includeFontPadding": false,
            },
            {
              "marginBottom": 11,
              "marginLeft": 11,
              "marginRight": 11,
              "marginTop": 11,
            },
            false,
            null,
          ]
        }
      >
        message
      </Text>
      <View
        marginRemStyle={
          {
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
        multiline={false}
        style={
          {
            "flexGrow": undefined,
            "flexShrink": undefined,
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={false}
          collapsable={false}
          disableAnimation={0}
          focusAnimation={0}
          focusable={true}
          jestAnimatedStyle={
            {
              "value": {
                "backgroundColor": "rgba(255, 255, 255, 0.2)",
                "borderColor": "rgba(0, 241, 162, 0)",
                "marginHorizontal": 0,
                "opacity": 1,
                "paddingVertical": 22,
              },
            }
          }
          multiline={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          scale={1}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, 0.2)",
              "borderColor": "rgba(0, 241, 162, 0)",
              "borderRadius": 11,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexGrow": undefined,
              "flexShrink": undefined,
              "marginHorizontal": 0,
              "opacity": 1,
              "paddingHorizontal": 17,
              "paddingVertical": 22,
            }
          }
        >
          <View
            collapsable={false}
            jestAnimatedStyle={
              {
                "value": {
                  "opacity": 0,
                  "width": 0,
                },
              }
            }
            scale={0}
            style={
              {
                "alignItems": "stretch",
                "aspectRatio": 1,
                "opacity": 0,
                "width": 0,
              }
            }
          />
          <View
            collapsable={false}
            focusValue={1}
            hasPlaceholder={false}
            jestAnimatedStyle={
              {
                "value": {
                  "marginBottom": undefined,
                  "marginTop": undefined,
                },
              }
            }
            style={
              {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "left": 0,
                "marginBottom": undefined,
                "marginTop": undefined,
              }
            }
          >
            <TextInput
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              autoFocus={true}
              collapsable={false}
              defaultValue="initialValue"
              disableAnimation={0}
              editable={true}
              focusAnimation={0}
              forwardedRef={[Function]}
              jestAnimatedStyle={
                {
                  "value": {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 22,
                  },
                }
              }
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              scale={1}
              selectionColor="rgba(255, 255, 255, .25)"
              style={
                {
                  "color": "rgba(255, 255, 255, 1)",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Quicksand-Regular",
                  "fontSize": 22,
                  "margin": 0,
                  "paddingHorizontal": 0,
                  "paddingVertical": 0,
                  "transform": [
                    {
                      "translateY": -0,
                    },
                  ],
                }
              }
              testID="undefined.textInput"
              textAlignVertical="top"
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": -22,
                "marginVertical": -28,
                "opacity": 1,
                "paddingHorizontal": 22,
                "paddingVertical": 28,
              }
            }
            testID="undefined.clearIcon"
          >
            <View
              collapsable={false}
              jestAnimatedStyle={
                {
                  "value": {
                    "opacity": 22,
                    "width": 22,
                  },
                }
              }
              scale={22}
              style={
                {
                  "alignItems": "stretch",
                  "aspectRatio": 1,
                  "opacity": 22,
                  "width": 22,
                }
              }
            >
              <Text
                collapsable={false}
                jestAnimatedStyle={
                  {
                    "value": {
                      "color": "rgba(255, 255, 255, 0.5019607843137255)",
                      "fontFamily": "anticon",
                      "fontSize": 22,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  }
                }
                style={
                  {
                    "color": "rgba(255, 255, 255, 0.5019607843137255)",
                    "fontFamily": "anticon",
                    "fontSize": 22,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  }
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        absolute={false}
        layout="column"
        parentType="modal"
        style={
          {
            "alignItems": "stretch",
            "alignSelf": "center",
            "flexDirection": "column",
            "margin": 11,
            "marginBottom": 22,
            "marginTop": 45,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flexBasis": "auto",
              "flexGrow": 0,
              "flexShrink": 0,
              "justifyContent": "center",
              "margin": -11,
              "opacity": 1,
              "padding": 11,
            }
          }
        >
          <BVLinearGradient
            colors={
              [
                4280299823,
                4278214733,
              ]
            }
            endPoint={
              {
                "x": 1,
                "y": 0,
              }
            }
            locations={null}
            startPoint={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              [
                {
                  "alignItems": "center",
                  "borderRadius": 34,
                  "flexDirection": "row",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "justifyContent": "center",
                },
                {
                  "alignSelf": "stretch",
                },
                {
                  "height": 67,
                  "paddingHorizontal": 34,
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              minimumFontScale={0.65}
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Quicksand-Regular",
                    "fontSize": 22,
                    "includeFontPadding": false,
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Quicksand-Medium",
                      "fontSize": 22,
                    },
                    null,
                  ],
                  null,
                ]
              }
            >
              Submit
            </Text>
          </BVLinearGradient>
        </View>
      </View>
    </View>
  </View>,
]
`;
